# rust_api_example

./: .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
migration/: Cargo.toml
migration/src/: m20220101_000001_create_tables.rs
src/: main.rs
src/api/: mod.rs  setup.rs
src/api/common/: helpers.rs  mod.rs
src/api/common/middlewares/: error.rs  mod.rs  process_time.rs  setup.rs
src/api/v1/: dependencies.rs  doc.rs  mod.rs  setup.rs
src/api/v1/endpoints/: auth.rs  healthcheck.rs  mod.rs  user.rs
src/api/v1/handlers/auth/: login.rs  logout.rs  mod.rs  refresh.rs
src/api/v1/handlers/user/: create.rs  delete.rs  get.rs  mod.rs  update.rs
src/api/v1/middlewares/: auth.rs
src/common/: error.rs  mod.rs
src/common/structs/requests/: mod.rs  pagination.rs  user.rs
src/common/structs/responses/: healthcheck.rs  mod.rs  status.rs  token.rs  user.rs
src/core/: config.rs
src/database/: connection.rs  gateway.rs  mod.rs
src/database/entity/: user.rs
src/database/repositories/: base.rs  macros.rs  mod.rs  user.rs
src/services/: gateway.rs  mod.rs  user.rs
src/services/security/: hash.rs  jwt.rs  mod.rs
