[package]
name = "axum_api_example"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
simple_logger = "5.0.0"
sea-orm = { version = "0.12.15", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = '1.37.0', features = ['full'] }
tokio-postgres = "0.7"
axum = { version = '0.7.5' }
axum-extra = { version = "0.9.3", features = ["cookie"] }
jsonwebtoken = { version = "9.3.0", features = ['use_pem']}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
utoipa = { version = "4.2.3", features = ['uuid', 'chrono', 'axum_extras', 'preserve_path_order'] } 
utoipa-swagger-ui = { version = "7.0.1", features = ["axum"]}
utoipa-gen = '4.3.0'
tower = { version = "0.4.13" }
tower-http = { version = "0.5.2", features = ["cors"] }
dotenv = "0.15.0"
thiserror = "1.0"
anyhow = "1.0"
sea-orm-cli = { version = "0.12.15" } 
argon2 = '0.5.3'
base64 = "0.22.1"
time = "0.3.20"
migration = { path = "migration" }